hphp/test/slow/async/stack_overflow.php.expectf

Fatal error: Stack overflow in %s/stack_overflow.php on line 4
string(37) "The request was abruptly interrupted."
string(0) ""
int(0)
